backend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2  # Number of backend pods to run
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 842676005617.dkr.ecr.us-east-2.amazonaws.com/backend:7  # Replace with your backend Docker image
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
