frontend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1  # Number of frontend pods to run
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: madeep2669/ecommerce-frontend:34  # Replace with your frontend Docker image
        ports:
        - containerPort: 80  # Use 80 since the application is exposed on this port
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80  # Use 80 for the service to expose the application
      targetPort: 80
      protocol: TCP
