alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: webapps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:842676005617:certificate/401118a8-2379-4c45-8ff1-69c081464335  # Your ACM certificate ARN
spec:
  rules:
    - host: ecommerce.madhumadeep.world
      http:
        paths:
          - path: /  # Frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api  # Backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
